fix: field spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -153,7 +153,7 @@ form .field-group .field{
     display: flex;
     flex-direction: column;
     flex: 1;
-    margin-bottom: 20px;
+    margin-bottom: 24px;
     width:  100px
 }
 
